# money-talks

./: .gitignore  README.md  pyproject.toml
apps/chat/: next.config.ts  package-lock.json  package.json
apps/chat/app/: globals.css  layout.tsx  page.tsx
apps/chat/app/api/chat/: route.ts
apps/chat/components/: artifacts-panel.tsx  chat-window.tsx  threads-sidebar.tsx
apps/chat/lib/: prompts.ts
apps/chat/lib/compaction/: compaction.ts
apps/chat/lib/server/: chat-sessions-store.ts
apps/chat/lib/tools/memory/: index.ts
apps/chat/lib/tools/notebook/: index.ts  kernel-client.ts
apps/chat/notebook/: Dockerfile  docker-compose.yml  startup.py
docs/: ARCHITECTURE.md
scripts/: generate_sample_data.py
src/money_talks/: __init__.py  cli.py
src/money_talks/ingest/: __init__.py  api_client.py  csv_loader.py
src/money_talks/lake/: __init__.py  queries.py  storage.py
src/money_talks/schemas/: __init__.py  accounts.py  cashflow.py  transactions.py
tests/: test_csv_loader.py  test_lake.py  test_schemas.py
